<!-- fragment_history.xml -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:id="@+id/fragment_history_root"
    android:layout_height="match_parent"
    android:background="@color/white">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
...
